feat(app): read pdf feature
Summary:
  1. add dependencies "pdfplumber"
  2. write fucntion and add file for read pdf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ description = "Universal File Converter Desktop App"
 authors = [{name = "Antigravity", email = "author@example.com"}]
 dependencies = [
     "python-docx",
+    "pdfplumber",
 ]
 requires-python = ">=3.9"
 
